# trading-in-public

./: .gitignore  AGENTS.md  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
apps/execution/: pyproject.toml
apps/execution/src/trade_execution_app/: __init__.py
apps/reconcile/: pyproject.toml
apps/reconcile/src/trade_reconcile_app/: __init__.py
apps/research/: pyproject.toml
apps/research/chart_viewer/: generate.py
apps/research/src/trade_research_app/: __init__.py  __main__.py  backtest.py  cli.py  macro_events.py
apps/research/src/trade_research_app/backtest/: __init__.py  cli_wiring.py  cost_stress.py  diagnostics.py  engine.py  enrichment.py  fill_model.py  records.py  runner.py  summary.py
apps/research/src/trade_research_app/vbt/: __init__.py  runner.py
docs/: backtesting.md  core-domain-contracts.md  ibkr-bot-integration.md  market-data.md  research-artifacts.md  research-workflow.md  strategy-chart-viewer.md  vectorbt-backtesting.md
docs/architecture/: backtest-architecture.md  implementation-principles.md  python-trading-system-foundation.md  service-map.md
docs/research/: historical-market-data-source.md  ibkr-api-shape.md  shared-core-boundary.md  spy-opening-range-breakout-trend-hold-baseline.md  spy-orb-baseline-reconciliation.md  spy-orb-decision.md  spy-orb-exit-comparison.md  spy-orb-exit-variant-comparison.md  spy-orb-thesis.md  spy-vwap-long-short-strategy-cycle-summary.md  spy-vwap-long-short-strategy-issue-plan.md  spy-vwap-pullback-deep-research.md  spy-vwap-range-reversion-stop-validation.md
notebooks/: 01_ma_crossover.py  02_rsi_mean_reversion.py  03_atr_trailing_stop.py
research/: market_structure.py  run_experiments.py  run_swing_experiments.py  swing_market_structure.py  validate_data.py  validate_swing_data.py
research/lib/: backtest.py  data_access.py  strategies.py  swing_backtest.py  swing_data.py  swing_strategies.py
research/mes_intraday/: diagnose_regime.py  exits.py  lib.py  make_chart.py  make_earnings_chart.py  make_exit_chart.py  make_oos_chart.py  make_regime_chart.py  make_sizing_chart.py  novel.py  run_account_sizing.py  run_exits.py  run_mes.py  run_novel.py  run_oos_2016.py
research/momentum/: fetch_universe.py  lib.py  run_momentum.py
research/reports/: etf_momentum_and_leveraged_trend_research.md  mes_intraday_exit_strategy_research.md  mes_intraday_novel_research.md  mes_intraday_regime_diagnosis.md  mes_intraday_strategy_research.md  single_stock_momentum_research.md  spy_5min_intraday_strategy_research.md  spy_multi_timeframe_strategy_research.md
research/results/: data_quality.json  experiments.csv  experiments.json  market_structure.json  mes_account_sizing.json  mes_exits_summary.json  mes_novel_summary.json  mes_oos_2016.json  mes_regime_diagnosis.json  mes_summary.csv  mes_summary.json  momentum_equity_focus.csv  momentum_results.csv  momentum_results.json  stocks_summary.json  stocks_sweep.csv  swing_data_quality.json  swing_experiments.csv  swing_experiments.json  swing_market_structure.json
research/stocks/: fetch_stocks.py  run_stocks.py
src/: consts.ts
src/components/: BaseHead.astro  Footer.astro  Header.astro  HeaderLink.astro
src/content/blog/: building-an-automated-trading-system-as-a-developer.md  choosing-the-platform-and-broker-for-v1.md
src/pages/: about.astro  index.astro
src/pages/blog/: index.astro
tests/: test_workspace_imports.py
tests/apps/: test_backtest_runner.py  test_research_cli.py  test_vbt_cli.py
tests/research/: test_mes_intraday.py  test_research_lib.py  test_swing_lib.py
tests/trade_core/: test_domain_contracts.py
tests/trade_data/: test_alpaca_source.py  test_store_and_sessions.py
tests/trade_strategies/: test_close_momentum.py  test_spy_orb_exit_variants.py  test_spy_vwap_pullback.py
tests/trade_vectorbt/: conftest.py  test_adapter.py  test_orb_signals.py  test_runner.py  test_signals.py  test_summary.py
