[project]
name = "trading-in-public"
version = "0.0.1"
description = "Public engineering journal and Python workspace for an automated trading system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "trade-analytics",
    "trade-brokers",
    "trade-core",
    "trade-data",
    "trade-execution-app",
    "trade-reconcile-app",
    "trade-research-app",
    "trade-strategies",
    "trade-vectorbt",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/execution",
    "apps/reconcile",
    "apps/research",
    "packages/trade_analytics",
    "packages/trade_brokers",
    "packages/trade_core",
    "packages/trade_data",
    "packages/trade_strategies",
    "packages/trade_vectorbt",
]

[tool.uv.sources]
trade-analytics = { workspace = true }
trade-brokers = { workspace = true }
trade-core = { workspace = true }
trade-data = { workspace = true }
trade-execution-app = { workspace = true }
trade-reconcile-app = { workspace = true }
trade-research-app = { workspace = true }
trade-strategies = { workspace = true }
trade-vectorbt = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
# Notebooks use # %% cell markers with imports spread across cells and long
# example command lines in markdown comments — both intentional and not
# subject to the same linting discipline as source code.
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["apps", "packages", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# pandas/numba/vectorbt ship without type stubs; missing-stub diagnostics are a
# library-availability concern rather than a project-code-quality signal, so
# suppress them globally. All other strict rules stay on for project code.
reportMissingTypeStubs = false

# trade_vectorbt wraps pandas/numba/vectorbt, which are untyped. Relax the
# unknown-type and attribute-access rules only for that package (and its
# tests) so the rest of the workspace stays fully strict. vectorbt's indicator
# .run() methods return objects whose output accessors (.ma, .rsi, .atr) have
# no type information, so attribute-access and argument-type diagnostics must
# also be suppressed. This is the Phase 0 decision documented in
# docs/architecture/vectorbt-integration-plan.md.
[[tool.pyright.executionEnvironments]]
root = "packages/trade_vectorbt"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAttributeAccessIssue = false
reportArgumentType = false

[[tool.pyright.executionEnvironments]]
root = "tests/trade_vectorbt"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAttributeAccessIssue = false
reportArgumentType = false

# apps/research vbt sub-package wraps trade_vectorbt (pandas/vectorbt),
# inheriting the same untyped accessors. The relaxation is scoped to this
# one sub-directory so the rest of the research app stays fully strict.
[[tool.pyright.executionEnvironments]]
root = "apps/research/src/trade_research_app/vbt"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAttributeAccessIssue = false
reportArgumentType = false

# The research/ track (SPY 5-min intraday study) is built directly on the
# untyped pandas/numpy/vectorbt stack for data-quality, market-structure, and
# backtest-harness scripting. Same rationale as trade_vectorbt: relax the
# unknown-type/attribute diagnostics for this directory and its tests while the
# rest of the workspace stays fully strict.
[[tool.pyright.executionEnvironments]]
root = "research"
# research/ is imported as a top-level package (research.lib.*) via a runtime
# sys.path insert (it is not a uv-workspace member); extraPaths is scoped here
# so the repo root is only added to resolution for this directory, leaving the
# rest of the workspace's import resolution untouched.
extraPaths = ["."]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownParameterType = false
reportAttributeAccessIssue = false
reportArgumentType = false

[[tool.pyright.executionEnvironments]]
root = "tests/research"
extraPaths = ["."]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownParameterType = false
reportAttributeAccessIssue = false
reportArgumentType = false
